--- a/PositionBroadcaster/Presentation/Presentation.csproj
+++ b/PositionBroadcaster/Presentation/Presentation.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
+  </ItemGroup>
+
 </Project>
