Use the Integration events form the Common/IntegrationEvents project

--- a/PositionBroadcaster/Application/Application.csproj
+++ b/PositionBroadcaster/Application/Application.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\IntergrationEvents\IntergrationEvents.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
