--- a/PositionBroadcaster/Infrastructure/Infrastructure.csproj
+++ b/PositionBroadcaster/Infrastructure/Infrastructure.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Common\IntergrationEvents\IntergrationEvents.csproj" />
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
