--- a/PositionConsumer/Domain/Domain.csproj
+++ b/PositionConsumer/Domain/Domain.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="AggregateSpecifications\**" />
+    <EmbeddedResource Remove="AggregateSpecifications\**" />
+    <None Remove="AggregateSpecifications\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
   </ItemGroup>
 
