Possibility to simulate delay packet, default delay is 10sec. But can be configured from appsettings.json

--- a/PositionBroadcaster/Presentation/appsettings.json
+++ b/PositionBroadcaster/Presentation/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Settings": {
-    "MinBroadcastRange": 1010,
-    "MaxBroadcastRange": 5000
+    "MinBroadcastRangeMilliSec": 1010,
+    "MaxBroadcastRangeMilliSec": 5000,
+    "DelayInMilliSec": 10000
   },
   "RabbitMQSettings": {
     "Host": "amqp://localhost:5672",
-    "UserName": "guest", //Canbe picked up from Keyvault.
-    "Password": "guest" //Canbe picked up from Keyvault.
+    "UserName": "guest", //Note:In production it should be picked up from Keyvault.
+    "Password": "guest" //Note:In production it should be picked up from Keyvault.
   }
 }
